# gdu-jam-2020

./: .gitignore  CMakeLists.txt  README.md
assets/: credits.txt
cmake/Modules/: FindSDL2_ttf.cmake
include/: Animation.h  Database.h  Enemy.h  Entity.h  Font.h  Game.h  GameState.h  Geometry.h  MathHelpers.h  Player.h  Projectile.h  Random.h  Renderer.h  Settings.h  Sound.h  Spawner.h  Texture.h  Timer.h  UserInput.h  Vector.h
scripts/: build_linux_native.sh  build_windows_cross.sh  build_windows_native.sh
src/: Animation.cpp  CMakeLists.txt  Database.cpp  Enemy.cpp  Entity.cpp  Font.cpp  Game.cpp  GameState.cpp  Geometry.cpp  MathHelpers.cpp  Player.cpp  Projectile.cpp  Random.cpp  Renderer.cpp  Sound.cpp  Spawner.cpp  Texture.cpp  Timer.cpp  UserInput.cpp  Vector.cpp  main.cpp
